--- a/app/src/main/res/layout/splash_bottom.xml
+++ b/app/src/main/res/layout/splash_bottom.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="@drawable/primary_button"
+        android:background="@drawable/primary_button_background"
         android:elevation="@dimen/button_elevation"
         android:text="@string/splash_application_button"
         tools:ignore="UnusedAttribute" />
