--- a/app/src/main/res/layout/author.xml
+++ b/app/src/main/res/layout/author.xml
@@ -1,69 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:gravity="center_horizontal">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/text_margin"
-        style="@style/HeaderText" />
-
-    <com.makeramen.RoundedImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/avatar"
-        app:riv_corner_radius="30dip"
-        app:riv_border_width="1dp"
-        app:riv_border_color="@color/primaryDarkColor"
-        app:riv_mutate_background="true"
-        app:riv_oval="true"
-        android:layout_margin="@dimen/activity_vertical_margin" />
-
-
-    <TextView
-        android:text="@string/description_header"
+    <LinearLayout
+        android:id="@+id/content_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/SectionHeader" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:gravity="center_horizontal"
+        android:visibility="gone">
 
-    <TextView
-        android:id="@+id/description"
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/text_margin"
+            style="@style/HeaderText" />
+
+        <com.makeramen.RoundedImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/avatar"
+            app:riv_corner_radius="30dip"
+            app:riv_border_width="1dp"
+            app:riv_border_color="@color/primaryDarkColor"
+            app:riv_mutate_background="true"
+            app:riv_oval="true"
+            android:layout_margin="@dimen/activity_vertical_margin" />
+
+
+        <TextView
+            android:text="@string/description_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/SectionHeader" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/DefaultText" />
+
+        <TextView
+            android:text="@string/email_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/SectionHeader" />
+
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/DefaultText" />
+
+        <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/recycler_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:clipToPadding="false"-->
+        <!--android:smoothScrollbar="true"-->
+        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingTop="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingBottom="@dimen/activity_vertical_margin" />-->
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/retry_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/DefaultText" />
+        android:layout_height="@dimen/item_height"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:background="@color/retryLayoutColor"
+        android:visibility="gone"
+        android:gravity="center">
 
-    <TextView
-        android:text="@string/email_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/SectionHeader" />
+        <TextView
+            android:text="@string/server_error_message"
+            android:textColor="@color/textWhite"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1" />
 
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/DefaultText" />
-
-    <!--<android.support.v7.widget.RecyclerView-->
-    <!--android:id="@+id/recycler_view"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:clipToPadding="false"-->
-    <!--android:smoothScrollbar="true"-->
-    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingTop="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingBottom="@dimen/activity_vertical_margin" />-->
-
-
-</LinearLayout>
+        <TextView
+            android:id="@+id/retry_button"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:text="@string/retry"
+            android:textSize="16sp"
+            android:textColor="@color/retryTextColor"
+            android:background="@drawable/retry_button_background"/>
+    </LinearLayout>
+</RelativeLayout>
