--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,15 @@
         <item name="android:paddingRight">@dimen/text_margin</item>
         <item name="android:textSize">15sp</item>
     </style>
+
+    <style name="ListItemTitle">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/primaryDarkColor</item>
+    </style>
+
+    <style name="ListItemSubtitle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/accentColor</item>
+    </style>
 </resources>
