--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
 
     <dimen name="button_elevation">4dp</dimen>
 
-    <dimen name="item_height">48dp</dimen>
+    <dimen name="item_height">46dp</dimen>
+    <dimen name="item_padding">5dp</dimen>
 </resources>
