--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -33,8 +33,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:choiceMode="singleChoice"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
+            android:divider="@color/divider"
+            android:dividerHeight="0.2dp"
             android:background="@android:color/white" />
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
