--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="primaryColor">#2196F3</color>
     <color name="primaryDarkColor">#0D47A1</color>
     <color name="accentColor">#F44336</color>
-    <color name="backgroundColor">#FFFFFF</color>
+    <color name="backgroundColor">#EEEEEE</color>
     <color name="divider">#DADADA</color>
 
     <!-- general text colors -->
