--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -2,8 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:background="@drawable/drawer_item_background"
     android:padding="@dimen/text_margin"
-    android:gravity="start|center_vertical"
     android:textColor="@color/primaryDarkColor"
-    android:textSize="20sp"/>
+    android:gravity="start|center_vertical" />
