--- a/app/src/main/res/layout/skills_list_item.xml
+++ b/app/src/main/res/layout/skills_list_item.xml
@@ -15,22 +15,18 @@
         android:background="@drawable/list_item_background">
 
         <TextView
-            android:id="@+id/position"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/ListItemTitle"/>
 
         <TextView
-            android:id="@+id/company"
+            android:id="@+id/subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/ListItemSubtitle"
-            android:textColor="@color/primary_text_color"/>
-
-        <TextView
-            android:id="@+id/dates"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/ListItemSubtitle"/>
+            android:textColor="@color/primary_text_color"
+            android:maxLines="1"
+            android:ellipsize="end"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
