--- a/app/src/main/res/layout/splash_bottom.xml
+++ b/app/src/main/res/layout/splash_bottom.xml
@@ -27,5 +27,6 @@
         android:background="@drawable/primary_button_background"
         android:elevation="@dimen/button_elevation"
         android:text="@string/splash_application_button"
+        android:textColor="@color/textWhite"
         tools:ignore="UnusedAttribute" />
 </LinearLayout>
