--- a/app/src/main/res/color/primary_text_color.xml
+++ b/app/src/main/res/color/primary_text_color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:exitFadeDuration="@android:integer/config_mediumAnimTime" android:enterFadeDuration="@android:integer/config_mediumAnimTime">
-    <item android:state_pressed="true" android:color="@color/textWhite" />
-    <item android:state_focused="true" android:color="@color/textWhite" />
-    <item android:color="@color/primaryColor" />
+    <item android:state_pressed="true" android:color="@color/text_white" />
+    <item android:state_focused="true" android:color="@color/text_white" />
+    <item android:color="@color/primary_color" />
 </selector>
