--- a/app/src/main/res/drawable-v21/list_item_background.xml
+++ b/app/src/main/res/drawable-v21/list_item_background.xml
@@ -5,7 +5,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/cardsColor" />
+            <solid android:color="@color/cards_color" />
         </shape>
     </item>
 </ripple>
