--- a/app/src/main/res/layout/splash_top.xml
+++ b/app/src/main/res/layout/splash_top.xml
@@ -4,9 +4,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:background="@color/primaryColor"
+    android:background="@color/primary_color"
     android:text="@string/app_name"
     android:textSize="45sp"
-    android:textColor="@color/textWhite"
+    android:textColor="@color/text_white"
     android:fontFamily="sans-serif-thin"
     tools:ignore="UnusedAttribute" />
