--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- theme colors -->
-    <color name="primary_color">#4741B8</color>
-    <color name="primary_dark_color">#392DA1</color>
-    <color name="accent_color">#F44336</color>
-    <color name="background_color">#EEEEEE</color>
+    <color name="primary">#4741B8</color>
+    <color name="primary_dark">#392DA1</color>
+    <color name="accent">#F44336</color>
+    <color name="background">#EEEEEE</color>
     <color name="divider">#DADADA</color>
 
     <!-- dark text colors -->
@@ -16,7 +16,7 @@
     <color name="text_white">#FFFFFF</color>
 
 
-    <color name="cards_color">#FAFAFA</color>
+    <color name="cards">#FAFAFA</color>
 
     <color name="retryLayoutColor">#323232</color>
     <color name="retryLayoutSelectedColor">#474747</color>
