--- a/app/src/main/res/drawable/primary_button_background.xml
+++ b/app/src/main/res/drawable/primary_button_background.xml
@@ -1,5 +1,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:exitFadeDuration="@android:integer/config_mediumAnimTime" android:enterFadeDuration="@android:integer/config_mediumAnimTime">
-    <item android:drawable="@color/primary_dark_color" android:state_selected="true" />
-    <item android:drawable="@color/primary_dark_color" android:state_pressed="true" />
-    <item android:drawable="@color/primary_color" />
+    <item android:drawable="@color/primary_dark" android:state_selected="true" />
+    <item android:drawable="@color/primary_dark" android:state_pressed="true" />
+    <item android:drawable="@color/primary" />
 </selector>
