--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
     <style name="HeaderText">
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/primary_dark_color</item>
+        <item name="android:textColor">@color/primary_dark</item>
     </style>
 
     <style name="SectionHeader" parent="HeaderText">
@@ -19,11 +19,11 @@
     <style name="ListItemTitle">
         <item name="android:textSize">19sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/primary_dark_text_color</item>
+        <item name="android:textColor">@color/text</item>
     </style>
 
     <style name="ListItemSubtitle">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/accent_text_color</item>
+        <item name="android:textColor">@color/text_secondary</item>
     </style>
 </resources>
