--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,16 +2,16 @@
 
     <style name="BaseTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- colorPrimary is used for the default action bar background -->
-        <item name="colorPrimary">@color/primary_color</item>
+        <item name="colorPrimary">@color/primary</item>
 
         <!-- colorPrimaryDark is used for the status bar -->
-        <item name="colorPrimaryDark">@color/primary_dark_color</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
 
         <!-- colorAccent is used as the default value for colorControlActivated
              which is used to tint widgets -->
-        <item name="colorAccent">@color/accent_color</item>
+        <item name="colorAccent">@color/accent</item>
 
-        <item name="android:windowBackground">@color/background_color</item>
+        <item name="android:windowBackground">@color/background</item>
         <item name="android:textColor">@color/text</item>
     </style>
 
