--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- theme colors -->
-    <color name="primary">#4741B8</color>
-    <color name="primary_dark">#392DA1</color>
-    <color name="accent">#F44336</color>
+    <color name="primary">#673AB7</color>
+    <color name="primary_dark">#512DA8</color>
+    <color name="primary_light">#D1C4E9</color>
+    <color name="accent">#FF4081</color>
+    
     <color name="background">#EEEEEE</color>
     <color name="divider">#DADADA</color>
 
