--- a/app/src/main/res/drawable-v21/active_button_background.xml
+++ b/app/src/main/res/drawable-v21/active_button_background.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?android:colorPrimaryDark">
+    android:color="@color/accent_dark">
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="?android:colorPrimary" />
+            <solid android:color="@color/accent" />
         </shape>
     </item>
 </ripple>
