--- a/app/src/main/res/layout/author.xml
+++ b/app/src/main/res/layout/author.xml
@@ -9,10 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/horizontal_margin"
+        android:paddingLeft="@dimen/horizontal_margin"
+        android:paddingTop="@dimen/vertical_margin"
+        android:paddingBottom="@dimen/vertical_margin"
         android:gravity="center_horizontal"
         android:visibility="gone">
 
@@ -33,11 +33,11 @@
             app:riv_border_color="@color/primary_dark"
             app:riv_mutate_background="true"
             app:riv_oval="true"
-            android:layout_margin="@dimen/activity_vertical_margin" />
+            android:layout_margin="@dimen/vertical_margin" />
 
 
         <TextView
-            android:text="@string/description_header"
+            android:text="@string/author_description_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/SectionHeader" />
