--- a/app/src/main/res/layout/default_list.xml
+++ b/app/src/main/res/layout/default_list.xml
@@ -14,9 +14,9 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:smoothScrollbar="true"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin" />
+            android:paddingRight="@dimen/horizontal_margin"
+            android:paddingLeft="@dimen/horizontal_margin"
+            android:paddingTop="@dimen/vertical_margin"
+            android:paddingBottom="@dimen/vertical_margin" />
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
