--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="primary_dark">#512DA8</color>
     <color name="primary_light">#D1C4E9</color>
     <color name="accent">#FF4081</color>
+    <color name="accent_dark">#C2185B</color>
 
     <color name="background">#EEEEEE</color>
     <color name="divider">#DADADA</color>
