--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <style name="HeaderText">
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
@@ -8,6 +9,7 @@
     <style name="SectionHeader" parent="HeaderText">
         <item name="android:layout_marginTop">@dimen/text_margin</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="DefaultText">
@@ -26,4 +28,24 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/text_secondary</item>
     </style>
+
+    <style name="BaseButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">@dimen/button_height</item>
+        <item name="android:minWidth">@dimen/button_min_width</item>
+        <item name="android:textColor">@color/text_white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:paddingLeft">@dimen/button_horizontal_padding</item>
+        <item name="android:paddingRight">@dimen/button_horizontal_padding</item>
+        <item name="android:layout_marginLeft">@dimen/button_horizontal_margin</item>
+        <item name="android:layout_marginRight">@dimen/button_horizontal_margin</item>
+        <item name="android:layout_marginTop">@dimen/button_vertical_margin</item>
+        <item name="android:layout_marginBottom">@dimen/button_vertical_margin</item>
+    </style>
+
+    <style name="ActiveButton" parent="BaseButton">
+        <item name="android:background">@drawable/active_button_background</item>
+    </style>
+
 </resources>
