--- a/app/src/main/res/layout/education_details.xml
+++ b/app/src/main/res/layout/education_details.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingRight="@dimen/horizontal_margin"
+    android:paddingLeft="@dimen/horizontal_margin"
+    android:paddingBottom="@dimen/vertical_margin">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingRight="@dimen/horizontal_margin"
-        android:paddingLeft="@dimen/horizontal_margin"
-        android:paddingTop="@dimen/vertical_margin"
-        android:paddingBottom="@dimen/vertical_margin">
-
+        android:layout_height="match_parent"
+        android:layout_above="@+id/link_button"
+        android:overScrollMode="never"
+        android:scrollbars="vertical">
 
         <LinearLayout
             android:id="@+id/details_container"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_marginBottom="@dimen/vertical_margin">
+            android:paddingTop="@dimen/vertical_margin"
+            android:paddingBottom="@dimen/vertical_margin">
 
             <TextView
                 android:text="@string/university_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/SectionHeader" />
+                style="@style/SectionHeader"
+                android:layout_marginTop="0dp" />
 
             <TextView
                 android:id="@+id/title"
@@ -44,18 +47,6 @@
                 style="@style/DefaultText" />
 
             <TextView
-                android:text="@string/description_header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/SectionHeader" />
-
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/DefaultText" />
-
-            <TextView
                 android:text="@string/education_dates_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -66,14 +57,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/DefaultText" />
-        </LinearLayout>
 
-        <Button
-            android:id="@+id/link_button"
-            android:text="@string/website_link"
-            android:layout_below="@id/details_container"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            style="@style/ActiveButton" />
-    </RelativeLayout>
-</ScrollView>
+            <TextView
+                android:text="@string/description_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/SectionHeader" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/DefaultText" />
+        </LinearLayout>
+    </ScrollView>
+
+    <Button
+        android:id="@+id/link_button"
+        android:text="@string/website_link"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        style="@style/ActiveButton" />
+</RelativeLayout>
