--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -5,6 +5,6 @@
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:background="@drawable/drawer_item_background"
-    android:padding="@dimen/text_margin"
+    android:padding="@dimen/text_vertical_margin"
     android:textColor="@color/primary_dark"
     android:gravity="start|center_vertical" />
