--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,12 @@
 
     <dimen name="item_height">46dp</dimen>
     <dimen name="item_padding">8dp</dimen>
+
+    <dimen name="drawer_margin">-8dp</dimen>
+
+    <dimen name="drawer_list_item_height">48dp</dimen>
+    <dimen name="drawer_list_image_height">24dp</dimen>
+    <dimen name="drawer_list_item_text_margin">72dp</dimen>
+    <dimen name="drawer_list_item_text_size">14sp</dimen>
+
 </resources>
