--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    style="@style/DrawerItem" />
+    android:orientation="horizontal"
+    android:background="@drawable/drawer_item_background">
+
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="@dimen/drawer_list_image_height"
+        android:layout_height="@dimen/drawer_list_image_height"
+        android:scaleType="centerInside"
+        tools:ignore="ContentDescription"
+        android:layout_marginLeft="@dimen/horizontal_margin"
+        android:layout_marginStart="@dimen/horizontal_margin"
+        android:layout_centerVertical="true" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_height="@dimen/drawer_list_item_height"
+        android:layout_width="match_parent"
+        android:gravity="start|center_vertical"
+        android:layout_centerVertical="true"
+        style="@style/DrawerItem"
+        android:layout_marginLeft="@dimen/drawer_list_item_text_margin"
+        android:layout_marginStart="@dimen/drawer_list_item_text_margin" />
+</RelativeLayout>
