Adding new styles.

--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:background="@color/text_white">
+        android:background="@color/background">
 
         <include
             layout="@layout/toolbar_light"
