--- a/app/src/main/res/drawable/active_button_background.xml
+++ b/app/src/main/res/drawable/active_button_background.xml
@@ -1,5 +1,6 @@
-<selector xmlns:android="http://schemas.android.com/apk/res/android" android:exitFadeDuration="@android:integer/config_mediumAnimTime" android:enterFadeDuration="@android:integer/config_mediumAnimTime">
-    <item android:drawable="@color/accent_dark" android:state_selected="true" />
-    <item android:drawable="@color/accent_dark" android:state_pressed="true" />
-    <item android:drawable="@color/accent" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:exitFadeDuration="@android:integer/config_shortAnimTime" >
+    <item android:drawable="@drawable/accent_button_highlighted" android:state_selected="true" />
+    <item android:drawable="@drawable/accent_button_highlighted" android:state_pressed="true" />
+    <item android:drawable="@drawable/accent_button" />
 </selector>
