--- a/app/src/main/res/drawable/list_item_background.xml
+++ b/app/src/main/res/drawable/list_item_background.xml
@@ -1,5 +1,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:exitFadeDuration="@android:integer/config_mediumAnimTime" android:enterFadeDuration="@android:integer/config_mediumAnimTime">
-    <item android:drawable="@color/primary" android:state_selected="true" />
-    <item android:drawable="@color/primary" android:state_pressed="true" />
+    <item android:drawable="@color/button" android:state_selected="true" />
+    <item android:drawable="@color/button" android:state_pressed="true" />
     <item android:drawable="@android:color/transparent" />
 </selector>
